Added timeLimiter, retry and code improvements